<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="com.example.jord.i7657043.HelpScreen">

    <ImageView
        android:contentDescription="@string/logo_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="24dp"
        android:id="@+id/imgViewLogoHelp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblInstructions"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="15sp"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/lblHelpTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/instructions"
        android:layout_centerInParent="false"
        android:textAlignment="center" />

    <TextView
        android:text="@string/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblHelpTitle"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/imgViewLogoHelp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:id="@+id/lblAuthor"
        android:textColor="@android:color/background_light"
        android:textSize="15sp" />

</RelativeLayout>
