<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="com.example.jord.i7657043.main_menu">

    <ImageView
        android:contentDescription="@string/logo_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="24dp"
        android:id="@+id/imgViewLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtBoxPlayerName"
        android:textSize="20sp"
        android:background="@android:color/background_light"
        android:layout_alignTop="@+id/lblHighScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:paddingLeft="3sp"
        android:textColor="?attr/actionModeSplitBackground" />

    <Button
        android:text="@string/play_game"
        android:layout_width="240dp"
        android:layout_height="110dp"
        android:id="@+id/btnPlayGame"
        android:textSize="24sp"
        android:textColor="@android:color/holo_orange_dark"
        android:textAllCaps="false"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/imgViewLogo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/lbl_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblHighScore"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/btnPlayGame"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/exit_game"
        android:layout_width="200dp"
        android:id="@+id/btnExit"
        android:textSize="18sp"
        android:textColor="@android:color/holo_orange_dark"
        android:textAllCaps="false"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" />
</RelativeLayout>
